finished loading openf1 intervals in gap rules

--- a/scripts/IS_agent/N05_gap_rules.ipynb
+++ b/scripts/IS_agent/N05_gap_rules.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 96,
    "id": "c1e966a5",
    "metadata": {},
    "outputs": [],
@@ -52,6 +52,506 @@
    "metadata": {},
    "source": [
     "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "7f5032a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Libraries and fact classes loaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Standard data processing libraries\n",
+    "import pandas as pd              # For data manipulation and analysis\n",
+    "import numpy as np               # For numerical operations\n",
+    "import matplotlib.pyplot as plt  # For creating visualizations\n",
+    "import seaborn as sns            # For enhanced visualizations\n",
+    "from datetime import datetime    # For timestamp handling\n",
+    "import os                        # For operating system interactions\n",
+    "import sys                       # For system-specific parameters and functions\n",
+    "import requests\n",
+    "# Add parent directory to system path to make custom modules accessible\n",
+    "sys.path.append(os.path.abspath('../'))\n",
+    "\n",
+    "# Import FastF1 for official F1 data access\n",
+    "import fastf1\n",
+    "import fastf1.plotting\n",
+    "from fastf1.core import Laps\n",
+    "\n",
+    "# Enable FastF1 cache to speed up subsequent data loading\n",
+    "fastf1.Cache.enable_cache('../../f1-strategy/f1_cache')\n",
+    "\n",
+    "# Import Experta components for building the rule engine\n",
+    "from experta import Rule, NOT, OR, AND, AS, MATCH, TEST, EXISTS  # Rule definition components\n",
+    "from experta import DefFacts, Fact, Field, KnowledgeEngine      # Core Experta classes\n",
+    "\n",
+    "# Import custom fact classes and functions from previous notebooks\n",
+    "\n",
+    "import utils.N01_agent_setup as agent_setup\n",
+    "from utils.N01_agent_setup import (\n",
+    "        TelemetryFact,              # For storing car performance data\n",
+    "        DegradationFact,            # For storing tire degradation information\n",
+    "        GapFact,                    # For storing gap information\n",
+    "        RaceStatusFact,             # For storing current race conditions\n",
+    "        StrategyRecommendation,     # For storing strategy recommendations\n",
+    "        F1StrategyEngine,           # Base engine class\n",
+    "        transform_gap_data,         # Function to convert gap data to facts\n",
+    "        load_gap_data               # Function to load gap data from FastF1\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Configure plotting style for better visualization\n",
+    "plt.style.use('seaborn-v0_8-darkgrid')  # Set default plot style\n",
+    "sns.set_context(\"notebook\", font_scale=1.2)  # Increase font size slightly\n",
+    "\n",
+    "print(\"Libraries and fact classes loaded successfully.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "043d1c30",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fedd550f",
+   "metadata": {},
+   "source": [
+    "## 2. Data Extraction and Processing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96494000",
+   "metadata": {},
+   "source": [
+    "### 2.1 Extracting basic Gaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "1e0d5eec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_session_key(year, gp_name):\n",
+    "    \"\"\"\n",
+    "    Get the session_key for the specified race to use with OpenF1 API.\n",
+    "    \n",
+    "    Args:\n",
+    "        year (int): Year of the race\n",
+    "        gp_name (str): Name of the Grand Prix\n",
+    "        \n",
+    "    Returns:\n",
+    "        int: session_key for OpenF1 API\n",
+    "    \"\"\"\n",
+    "    # For Spain 2023 GP, the correct session_key is 9102\n",
+    "    if year == 2023 and gp_name.lower() == \"spain\":\n",
+    "        return 9102\n",
+    "    \n",
+    "    # For other races, we would need to implement a lookup or API call\n",
+    "    # to find the correct session_key\n",
+    "    print(f\"⚠️ Only Spain 2023 session_key is implemented\")\n",
+    "    print(f\"⚠️ For other races, you need to find the correct session_key\")\n",
+    "    return None\n",
+    "\n",
+    "def extract_basic_gaps(year, gp_name, max_interval=None):\n",
+    "    \"\"\"\n",
+    "    Extract gap data between cars from OpenF1 API.\n",
+    "    \n",
+    "    Args:\n",
+    "        year (int): Year of the race\n",
+    "        gp_name (str): Name of the Grand Prix\n",
+    "        max_interval (float, optional): Filter for intervals less than this value\n",
+    "        \n",
+    "    Returns:\n",
+    "        DataFrame: Basic gap data between cars\n",
+    "    \"\"\"\n",
+    "    base_url = \"https://api.openf1.org/v1/intervals\"\n",
+    "    \n",
+    "    # Get the session_key for this race\n",
+    "    session_key = get_session_key(year, gp_name)\n",
+    "    if session_key is None:\n",
+    "        print(\"❌ Could not get session_key for this race\")\n",
+    "        return pd.DataFrame()\n",
+    "    \n",
+    "    print(f\"Fetching data from OpenF1 for {gp_name} {year} (session_key: {session_key})\")\n",
+    "    \n",
+    "    # Build the URL with optional filtering for interval size\n",
+    "    if max_interval is not None:\n",
+    "        url = f\"{base_url}?session_key={session_key}&interval<{max_interval}\"\n",
+    "    else:\n",
+    "        url = f\"{base_url}?session_key={session_key}\"\n",
+    "    \n",
+    "    try:\n",
+    "        print(\"Making request to OpenF1 API...\")\n",
+    "        response = requests.get(url)\n",
+    "        response.raise_for_status()  # Raise exception for HTTP errors\n",
+    "        \n",
+    "        # Check if we received valid data\n",
+    "        if response.text and response.text.strip():\n",
+    "            intervals_data = response.json()\n",
+    "            print(f\"✓ Found {len(intervals_data)} records for session_key={session_key}\")\n",
+    "            \n",
+    "            # Convert to DataFrame\n",
+    "            gaps_df = pd.DataFrame(intervals_data)\n",
+    "            \n",
+    "            # Basic data processing\n",
+    "            if 'date' in gaps_df.columns:\n",
+    "                # Handle date conversion\n",
+    "                gaps_df['date'] = pd.to_datetime(gaps_df['date'], errors='coerce')\n",
+    "            \n",
+    "            # Ensure consistent column naming\n",
+    "            if 'interval' in gaps_df.columns:\n",
+    "                gaps_df.rename(columns={'interval': 'GapToCarAhead'}, inplace=True)\n",
+    "            \n",
+    "            # Extract driver numbers for consistency with our existing code\n",
+    "            if 'driver_number' in gaps_df.columns:\n",
+    "                gaps_df.rename(columns={'driver_number': 'DriverNumber'}, inplace=True)\n",
+    "            \n",
+    "            if 'driver_ahead' in gaps_df.columns:\n",
+    "                gaps_df.rename(columns={'driver_ahead': 'CarAheadNumber'}, inplace=True)\n",
+    "            \n",
+    "            return gaps_df\n",
+    "        else:\n",
+    "            print(\"Empty response from API\")\n",
+    "            return pd.DataFrame()\n",
+    "    \n",
+    "    except Exception as e:\n",
+    "        print(f\"Error querying OpenF1: {e}\")\n",
+    "        return pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38d7d662",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7014469",
+   "metadata": {},
+   "source": [
+    "### 2.2 Calculating gap trends "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "3a7cdd8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_gap_trends(gaps_df, window_size=3):\n",
+    "    \"\"\"\n",
+    "    Calculate how gaps are evolving over time (opening or closing).\n",
+    "    \n",
+    "    Args:\n",
+    "        gaps_df: DataFrame with basic gap data\n",
+    "        window_size: Number of laps to calculate trend over\n",
+    "        \n",
+    "    Returns:\n",
+    "        DataFrame: Gap data with trend information added\n",
+    "    \"\"\"\n",
+    "    # Make a copy to avoid modifying the original\n",
+    "    result_df = gaps_df.copy()\n",
+    "    \n",
+    "    # Add columns for trend data\n",
+    "    result_df['GapToCarAheadTrend'] = np.nan\n",
+    "    \n",
+    "    # Group by driver and sort by date to calculate trends over time\n",
+    "    for driver in result_df['DriverNumber'].unique():\n",
+    "        # Get all data for this driver\n",
+    "        driver_data = result_df[result_df['DriverNumber'] == driver].sort_values('date')\n",
+    "        \n",
+    "        if len(driver_data) <= window_size:\n",
+    "            continue  # Not enough data points\n",
+    "        \n",
+    "        # For each data point, calculate trend (change in gap over time window)\n",
+    "        for i in range(window_size, len(driver_data)):\n",
+    "            current_idx = driver_data.iloc[i].name\n",
+    "            previous_idx = driver_data.iloc[i - window_size].name\n",
+    "            \n",
+    "            # Gap trend (positive = gap increasing, negative = gap decreasing)\n",
+    "            current_gap = driver_data.iloc[i]['GapToCarAhead']\n",
+    "            previous_gap = driver_data.iloc[i - window_size]['GapToCarAhead']\n",
+    "            \n",
+    "            if not pd.isna(current_gap) and not pd.isna(previous_gap):\n",
+    "                # Calculate average change per data point in the window\n",
+    "                result_df.loc[current_idx, 'GapToCarAheadTrend'] = (current_gap - previous_gap) / window_size\n",
+    "    \n",
+    "    # Note: Here we're not calculating GapToCarBehindTrend since OpenF1 data \n",
+    "    # only provides gaps to car ahead\n",
+    "    \n",
+    "    return result_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e8eda7f",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0e79c68",
+   "metadata": {},
+   "source": [
+    "### 2.3 Identifying strategic windows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "6c9647a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def identify_strategic_windows(gaps_df):\n",
+    "    \"\"\"\n",
+    "    Identify undercut and DRS windows based on gap sizes.\n",
+    "    \n",
+    "    Args:\n",
+    "        gaps_df: DataFrame with gap data\n",
+    "        \n",
+    "    Returns:\n",
+    "        DataFrame: Gap data with strategic window flags\n",
+    "    \"\"\"\n",
+    "    # Make a copy to avoid modifying the original\n",
+    "    result_df = gaps_df.copy()\n",
+    "    \n",
+    "    # Add columns for strategic windows\n",
+    "    result_df['InUndercutWindow'] = False\n",
+    "    result_df['InDRSWindow'] = False\n",
+    "    \n",
+    "    # Define thresholds (based on F1 strategy knowledge)\n",
+    "    UNDERCUT_THRESHOLD = 1.5  # Gap less than 1.5s indicates undercut possibility\n",
+    "    DRS_THRESHOLD = 1.0       # Gap less than 1.0s enables DRS\n",
+    "    \n",
+    "    # Mark rows where car is within undercut window of car ahead\n",
+    "    mask = (result_df['GapToCarAhead'] < UNDERCUT_THRESHOLD)\n",
+    "    result_df.loc[mask, 'InUndercutWindow'] = True\n",
+    "    \n",
+    "    # Mark rows where car is within DRS window of car ahead\n",
+    "    mask = (result_df['GapToCarAhead'] < DRS_THRESHOLD)\n",
+    "    result_df.loc[mask, 'InDRSWindow'] = True\n",
+    "    \n",
+    "    # Add inferred lap number from date/time if not present\n",
+    "    if 'LapNumber' not in result_df.columns and 'date' in result_df.columns:\n",
+    "        # Group by driver and create sequential lap numbers\n",
+    "        for driver in result_df['DriverNumber'].unique():\n",
+    "            driver_data = result_df[result_df['DriverNumber'] == driver].sort_values('date')\n",
+    "            # Assign sequential numbers starting from 1\n",
+    "            result_df.loc[driver_data.index, 'LapNumber'] = range(1, len(driver_data) + 1)\n",
+    "    \n",
+    "    return result_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a09005c",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57427a2d",
+   "metadata": {},
+   "source": [
+    "### 2.4 Load and process race gaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "a2e48055",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_process_all_gaps(year, gp_name, max_interval=None):\n",
+    "    \"\"\"\n",
+    "    Load all gap data from OpenF1 sin filtrar por fin de vuelta.\n",
+    "    \"\"\"\n",
+    "    # Básicamente mantener el código actual pero sin intentar filtrar por fin de vuelta\n",
+    "    # Usaremos todos los registros y luego los correlacionaremos según sea necesario\n",
+    "    \n",
+    "    # Extract basic gaps data from OpenF1\n",
+    "    print(f\"Loading {gp_name} {year} gap data from OpenF1...\")\n",
+    "    gaps_df = extract_basic_gaps(year, gp_name, max_interval)\n",
+    "    \n",
+    "    if gaps_df.empty:\n",
+    "        print(\"❌ Failed to load gap data\")\n",
+    "        return gaps_df\n",
+    "    \n",
+    "    # Calculate trends\n",
+    "    print(\"\\nCalculating gap trends...\")\n",
+    "    gaps_df = calculate_gap_trends(gaps_df)\n",
+    "    \n",
+    "    # Identify strategic windows\n",
+    "    print(\"\\nIdentifying strategic windows...\")\n",
+    "    gaps_df = identify_strategic_windows(gaps_df)\n",
+    "    \n",
+    "    print(f\"Processing complete. Dataset has {len(gaps_df)} records with full gap analysis.\")\n",
+    "    print(f\"Note: This includes multiple measurements per lap that will need to be correlated\")\n",
+    "    \n",
+    "    return gaps_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61f817fe",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d3113a7",
+   "metadata": {},
+   "source": [
+    "### 2.5 Executing the Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "e5017566",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Spain 2023 gap data from OpenF1...\n",
+      "Fetching data from OpenF1 for Spain 2023 (session_key: 9102)\n",
+      "Making request to OpenF1 API...\n",
+      "✓ Found 18281 records for session_key=9102\n",
+      "\n",
+      "Calculating gap trends...\n",
+      "\n",
+      "Identifying strategic windows...\n",
+      "Processing complete. Dataset has 18281 records with full gap analysis.\n",
+      "Note: This includes multiple measurements per lap that will need to be correlated\n",
+      "\n",
+      "Sample of processed gap data:\n",
+      "  gap_to_leader  GapToCarAhead  DriverNumber                             date  \\\n",
+      "0         0.131          0.131            55 2023-06-04 13:03:22.688000+00:00   \n",
+      "1         0.276          0.145             4 2023-06-04 13:03:22.797000+00:00   \n",
+      "2         0.347          0.071            44 2023-06-04 13:03:22.797000+00:00   \n",
+      "3         0.469          0.122            18 2023-06-04 13:03:22.922000+00:00   \n",
+      "4         0.713          0.244            31 2023-06-04 13:03:23.359000+00:00   \n",
+      "\n",
+      "   session_key  meeting_key  GapToCarAheadTrend  InUndercutWindow  \\\n",
+      "0         9102         1211                 NaN              True   \n",
+      "1         9102         1211                 NaN              True   \n",
+      "2         9102         1211                 NaN              True   \n",
+      "3         9102         1211                 NaN              True   \n",
+      "4         9102         1211                 NaN              True   \n",
+      "\n",
+      "   InDRSWindow  LapNumber  \n",
+      "0         True        1.0  \n",
+      "1         True        1.0  \n",
+      "2         True        1.0  \n",
+      "3         True        1.0  \n",
+      "4         True        1.0  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Execute the full gap data processing pipeline\n",
+    "# Using the 2023 Spanish Grand Prix as our example\n",
+    "# We filter for gaps under 5 seconds which are most strategically relevant\n",
+    "processed_gaps = load_process_all_gaps(2023, \"Spain\", max_interval=5.0)\n",
+    "\n",
+    "# Display a sample of the processed data\n",
+    "print(\"\\nSample of processed gap data:\")\n",
+    "print(processed_gaps.head())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "f910c4c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Saved processed gap data to ../../f1-strategy/data/processed/spain_2023_gaps_openf1.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save the processed data to CSV for later use\n",
+    "output_dir = \"../../f1-strategy/data/processed\"\n",
+    "os.makedirs(output_dir, exist_ok=True)\n",
+    "output_path = f\"{output_dir}/spain_2023_gaps_openf1.csv\"\n",
+    "processed_gaps.to_csv(output_path, index=False, float_format='%.3f')\n",
+    "print(f\"\\nSaved processed gap data to {output_path}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "bedda3a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Gap statistics:\n",
+      "count    18281.000000\n",
+      "mean         2.054774\n",
+      "std          1.277370\n",
+      "min          0.001000\n",
+      "25%          1.006000\n",
+      "50%          1.788000\n",
+      "75%          2.976000\n",
+      "max          4.999000\n",
+      "Name: GapToCarAhead, dtype: float64\n",
+      "\n",
+      "Strategic window summary:\n",
+      "Undercut windows: 7458 (40.8%)\n",
+      "DRS windows: 4543 (24.9%)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Basic statistics about the gaps\n",
+    "print(\"\\nGap statistics:\")\n",
+    "gap_stats = processed_gaps['GapToCarAhead'].describe()\n",
+    "print(gap_stats)\n",
+    "\n",
+    "# Count strategic windows\n",
+    "print(\"\\nStrategic window summary:\")\n",
+    "print(f\"Undercut windows: {processed_gaps['InUndercutWindow'].sum()} ({processed_gaps['InUndercutWindow'].mean()*100:.1f}%)\")\n",
+    "print(f\"DRS windows: {processed_gaps['InDRSWindow'].sum()} ({processed_gaps['InDRSWindow'].mean()*100:.1f}%)\")"
    ]
   }
  ],
