added undercut/overcut explanations

--- a/scripts/IS_agent/N05_gap_rules.ipynb
+++ b/scripts/IS_agent/N05_gap_rules.ipynb
@@ -37,8 +37,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8804fc44",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d39c442",
+   "metadata": {},
+   "source": [
+    "## What is an undercut or an overcut?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1644f51",
+   "metadata": {},
+   "source": [
+    "In this section, I will make an explanation of these two concepts, enhancing the explanation with two posters made with ChatGPT (they have some spelling mistakes but still provide good explanations).\n",
+    "\n",
+    "<p float=\"left\">\n",
+    "  <img src=\"images/undercut_poster.png\" alt=\"Undercut Image\" width=\"40%\" style=\"margin-right: 10px;\">\n",
+    "  <img src=\"images/overcut_poster.png\" alt=\"Overcut Image\" width=\"40%\">\n",
+    "</p>\n",
+    "\n",
+    "\n",
+    "### Undercut\n",
+    "\n",
+    "The F1 undercut is a strategic maneuver that can change the course of a race. When the chasing car is within about three seconds of the leader, the leader may choose to enter the pit lane early to switch to fresh tires.\n",
+    "\n",
+    "Although this pit stop costs roughly 20–23 seconds, the significant performance boost from the fresh tires allows the leader to complete laps much faster than the car still running on worn tires. By the time the chaser paces into its own pit stop, the leader has gained enough of a time advantage to overtake on track. \n",
+    "\n",
+    "This short-term benefit—gaining extra pace due to better tire grip—is critical on circuits with high tire degradation, such as Barcelona.\n",
+    "\n",
+    "\n",
+    "### Overcut\n",
+    "\n",
+    "In contrast, the overcut is a similar concept with an opposite approach. Rather than pitting early, a driver using the overcut strategy remains on the track with worn tires for a longer period while the competitors pit.\n",
+    "\n",
+    "If the driver can maintain competitive lap times despite the older rubber—or if the competitors’ new tires take extra time to warm up—the longer stint can yield a time advantage. Once the rival makes its pit stop, the overcutting driver then pits later and, thanks to having run a more consistent pace in clean air, can gain positions on the circuit.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "c1e966a5",
    "metadata": {},
    "outputs": [],
@@ -56,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "7f5032a6",
    "metadata": {},
    "outputs": [
@@ -64,6 +111,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Engine initialized with 2 facts\n",
+      "Initial facts: [InitialFact(), RaceStatusFact(lap=1, total_laps=60, race_phase='start', track_status='clear')]\n",
+      "\n",
+      "=== TIRE DEGRADATION ANALYSIS ===\n",
+      "Using first predicted rate as current degradation: 0.07\n",
+      "Tire facts declared: {'degradation': DegradationFact(degradation_rate=0.07, predicted_rates=frozenlist([0.07, 0.09, 0.12])), 'telemetry': TelemetryFact(tire_age=4, compound_id=2, driver_number=44, position=1)}\n",
+      "Engine now has 4 facts\n",
+      "\n",
+      "=== LAP TIME PREDICTION ===\n",
+      "Lap time facts declared: {'telemetry': TelemetryFact(driver_number=44, lap_time=80.3, predicted_lap_time=79.9, compound_id=2, tire_age=4, position=1)}\n",
+      "Engine now has 5 facts\n",
+      "\n",
+      "=== RADIO ANALYSIS ===\n",
+      "Radio fact declared: <f-5>\n",
+      "Engine now has 6 facts\n",
+      "\n",
+      "=== ALL ENGINE FACTS ===\n",
+      "Fact 1: InitialFact - <f-0>\n",
+      "Fact 2: RaceStatusFact - <f-1>\n",
+      "Fact 3: DegradationFact - <f-2>\n",
+      "Fact 4: TelemetryFact - <f-3>\n",
+      "Fact 5: TelemetryFact - <f-4>\n",
+      "Fact 6: RadioFact - <f-5>\n",
       "Libraries and fact classes loaded successfully.\n"
      ]
     }
@@ -134,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "1e0d5eec",
    "metadata": {},
    "outputs": [],
@@ -245,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "3a7cdd8d",
    "metadata": {},
    "outputs": [],
@@ -312,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "6c9647a4",
    "metadata": {},
    "outputs": [],
@@ -375,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "a2e48055",
    "metadata": {},
    "outputs": [],
@@ -427,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "e5017566",
    "metadata": {},
    "outputs": [
@@ -484,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "f910c4c4",
    "metadata": {},
    "outputs": [
@@ -509,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "bedda3a7",
    "metadata": {},
    "outputs": [
